--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio Galerie photo nina Carducci</title> <!-- add title-->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<!-- <link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style"> -->
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
+	<meta name="description" content="nina Carducci photographe professionnel passionnée, presente son Portfolio de gallery photo pour les mariage, les portraits, les événements">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<script src="./assets/maugallery.js" async></script>
+	<script src="./assets/scripts.js" async></script>
 </head>
 <body>
 <header class="top-header"> <!-- html syntaxe div to header-->
@@ -24,7 +26,7 @@
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
 			<!-- change add alt and modify format image -->
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images compressed/instagram.webp" alt="image logo instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images_compressed/instagram.webp" alt="image logo instagram"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -41,13 +43,13 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<!-- change add alt and modify format image -->
-					<img src="./assets/images compressed/slider compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="image slider ryoji itwata">
+					<img src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="image slider ryoji itwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images compressed/slider compr/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="image slider nicholas green">
+					<img src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="image slider nicholas green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images compressed/slider compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="image slider edward cisneros">
+					<img src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="image slider edward cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,11 +64,11 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images compressed/nina.webp" alt="photo profil nina Carducci"> <!-- change add alt and modify format image -->
+			<img src="./assets/images_compressed/nina.webp" alt="photo profil nina Carducci"> <!-- change add alt and modify format image -->
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
-			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
+			<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 		</div>
@@ -76,15 +78,15 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<!-- change add alt and modify format image -->
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images compressed/gallery compr/concert compr/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="image gallery concert aaron paul"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images compressed/gallery compr/entreprise compr/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="image gallery entreprise morshedlou"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images compressed/gallery compr/entreprise compr/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="image gallery entreprise jason goodman"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images compressed/gallery compr/mariage compr/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="image gallery mariage hannah busing"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images compressed/gallery compr/portrait compr/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="image gallery portrait ade tunji"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images compressed/gallery compr/mariage compr/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="image gallery mariage jakob owens"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images compressed/gallery compr/portrait compr/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="image gallery portrait nino van prattenburg"/>
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images compressed/gallery compr/concert compr/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="image gallery concert austin neill"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images compressed/gallery compr/entreprise compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="image gallery entreprise mateus campos"/>
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="image gallery concert aaron paul">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="image gallery entreprise morshedlou">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="image gallery entreprise jason goodman"/>
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="image gallery mariage hannah busing">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="image gallery portrait ade tunji">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="image gallery mariage jakob owens">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="image gallery portrait nino van prattenburg">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="image gallery concert austin neill">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="image gallery entreprise mateus campos">
 			</div>
 		</div>
 		<div class="quote">
@@ -155,11 +157,11 @@
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<input type="submit" value="Envoyer">
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images compressed/camera.webp" alt="image camera"> <!-- change add alt and modify format image -->
+			<img loading="lazy" src="./assets/images_compressed/camera.webp" alt="image camera"> <!-- change add alt and modify format image -->
 		</div>
 	</div>
 </footer>
