--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio Galerie photo nina Carducci</title> <!-- add title-->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<!-- <link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style"> -->
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="nina Carducci photographe professionnel passionnée, presente son Portfolio de gallery photo pour les mariage, les portraits, les événements">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js" async></script>
-	<script src="./assets/scripts.js" async></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 </head>
 <body>
 <header class="top-header"> <!-- html syntaxe div to header-->
@@ -43,13 +42,28 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<!-- change add alt and modify format image -->
-					<img src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="image slider ryoji itwata">
+					<img src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
+						 srcset="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1500w,
+								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w,
+								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-600.webp 600w"		
+						 class="d-block w-100" 
+						 alt="image slider ryoji itwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="image slider nicholas green">
+					<img loading="lazy" src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
+										srcset="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp 1500w, 
+												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w,
+												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-600.webp 600w"
+										class="d-block w-100" 
+										alt="image slider nicholas green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="image slider edward cisneros">
+					<img loading="lazy" src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+										srcset="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1500w,
+												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w,
+												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-600-bis.webp 600w"	
+										 class="d-block w-100" 
+										 alt="image slider edward cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -64,7 +78,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images_compressed/nina.webp" alt="photo profil nina Carducci"> <!-- change add alt and modify format image -->
+			<img loading="lazy" src="./assets/images_compressed/nina.webp" alt="photo profil nina Carducci"> <!-- change add alt and modify format image -->
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -78,15 +92,15 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<!-- change add alt and modify format image -->
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="image gallery concert aaron paul">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="image gallery entreprise morshedlou">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="image gallery entreprise jason goodman"/>
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="image gallery mariage hannah busing">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="image gallery portrait ade tunji">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="image gallery mariage jakob owens">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="image gallery portrait nino van prattenburg">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="image gallery concert austin neill">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="image gallery entreprise mateus campos">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash-480.webp" alt="image gallery concert aaron paul">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash-480.webp" alt="image gallery entreprise morshedlou">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash-480.webp" alt="image gallery entreprise jason goodman"/>
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash-480.webp" alt="image gallery mariage hannah busing">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash-480.webp" alt="image gallery portrait ade tunji">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash-480.webp" alt="image gallery mariage jakob owens">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash-480.webp" alt="image gallery portrait nino van prattenburg">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash-480.webp" alt="image gallery concert austin neill">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-480.webp" alt="image gallery entreprise mateus campos">
 			</div>
 		</div>
 		<div class="quote">
@@ -161,7 +175,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img loading="lazy" src="./assets/images_compressed/camera.webp" alt="image camera"> <!-- change add alt and modify format image -->
+			<img loading="lazy" src="./assets/images_compressed/camera-450.webp" alt="image camera"> <!-- change add alt and modify format image -->
 		</div>
 	</div>
 </footer>
