correction rich snippet

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		{
 			"@context": "https://schema.org",
 			"@type": "WebSite",
-			"name": "Portfolio de Sophie Martin",
-			"description": "Photographies de paysages, portraits et événements",
-			"url": "https://www.sophiemartinphoto.com",
+			"name": "Portfolio de Nina Carducci",
+			"description": "Photographies de portraits et événements",
+			"url": "https://jkdev91.github.io/nina_carducci/"
 		}	
 
 	</script>
