correction rich snippet

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 			"@type": "WebSite",
 			"name": "Portfolio de Nina Carducci",
 			"description": "Photographies de portraits et événements",
-			"url": "https://jkdev91.github.io/nina_carducci/"
-		}	
-
+			"url": "https://jkdev91.github.io/nina_carducci/",
+		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
