--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<script type="application/ld+json">
 		{
-			"@context": "https://schema.org",
-			"@type": "WebSite",
-			"name": "Portfolio de Nina Carducci",
-			"description": "Photographies de portraits et événements",
-			"url": "https://jkdev91.github.io/nina_carducci/",
+		"@context": "https://schema.org",
+		"@type": "WebSite",
+		"name": "Portfolio de Sophie Martin",
+		"description": "Photographies de paysages, portraits et événements",
+		"url": "https://www.sophiemartinphoto.com",
 		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
