--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<script type="application/ld+json">
 		{
-		"@context": "https://schema.org",
-		"@type": "WebSite",
-		"name": "Portfolio de Sophie Martin",
-		"description": "Photographies de paysages, portraits et événements",
-		"url": "https://www.sophiemartinphoto.com",
+			"@context": "https://schema.org";
+			"@type": "WebSite";
+			"name": "Portfolio de Sophie Martin";
+			"description": "Photographies de paysages, portraits et événements";
+			"url": "https://www.sophiemartinphoto.com"
 		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
