add rich snippet localBussiness

--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
 
 	<script type="application/ld+json">
 		{
-			"@context": "https://schema.org";
+			"@context": "https://schema.org",
 			"@type": "WebSite";
-			"name": "Portfolio de Sophie Martin";
+			"name": "Portfolio de Sophie Martin"
 			"description": "Photographies de paysages, portraits et événements";
 			"url": "https://www.sophiemartinphoto.com"
 		}
 	</script>
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Mexico Beach",
+			"addressRegion": "FL",
+			"streetAddress": "3102 Highway 98"
+		  },
+		  "description": " photographe portrait et événements",
+		  "name": "nina Carducci",
+		  "telephone": "850-648-4200"
+		}
+		</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
