--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 		  "telephone": "850-648-4200"
 		}
 		</script>
+
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Person",
+				"name": "Marie Dupont",
+				"jobTitle": "Photographe",
+				"telephone": "+33 6 12 34 56 78",
+				"email": "marie.dupont@example.com",
+				"url": "https://www.example.com/marie-dupont"
+			  }
+		</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
