correction rich snippet

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<script type="application/ld+json">
 		{
 			"@context": "https://schema.org",
-			"@type": "WebSite";
-			"name": "Portfolio de Sophie Martin"
-			"description": "Photographies de paysages, portraits et événements";
-			"url": "https://www.sophiemartinphoto.com"
+			"@type": "WebSite",
+			"name": "Portfolio de Nina Carducci",
+			"description": "portfolio Photographies de portraits et événements",
+			"url": "https://jkdev91.github.io/nina_carducci/"
 		}
 	</script>
 
@@ -20,13 +20,14 @@
 		  "@type": "LocalBusiness",
 		  "address": {
 			"@type": "PostalAddress",
-			"addressLocality": "Mexico Beach",
-			"addressRegion": "FL",
-			"streetAddress": "3102 Highway 98"
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"streetAddress": "68 avenue Alsace-Lorraine"
 		  },
 		  "description": " photographe portrait et événements",
 		  "name": "nina Carducci",
-		  "telephone": "850-648-4200"
+		  "telephone": "+33 05 56 67 78 89",
+		  "openingHours": "Mo-Fr 10:00-19:00"
 		}
 		</script>
 
@@ -34,11 +35,12 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "Person",
-				"name": "Marie Dupont",
+				"name": "Nina Carducci",
 				"jobTitle": "Photographe",
-				"telephone": "+33 6 12 34 56 78",
-				"email": "marie.dupont@example.com",
-				"url": "https://www.example.com/marie-dupont"
+				"telephone": "+33 05 56 67 78 89",
+				"openingHours": "Mo-Fr 10:00-19:00",
+				"email": "nina.carducci@example.com",
+				"url": "https://jkdev91.github.io/nina_carducci/"
 			  }
 		</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
