add attribut sizes in balise img

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr"> <!-- add lang-->
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio Galerie photo nina Carducci</title> <!-- add title-->
 
@@ -48,8 +49,20 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
+	
 	<meta name="description" content="nina Carducci photographe professionnel passionnée, presente son Portfolio de gallery photo pour les mariage, les portraits, les événements">
+	<!-- facebook -->
+	<meta property="og:title" content="Titre de votre page">
+	<meta property="og:description" content="Description de votre site">
+	<meta property="og:image" content="assets\images_compressed\nina.webp">
+
+	<!-- twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Portfolio Galerie photo nina Carducci">
+	<meta name="twitter:description" content="nina Carducci photographe professionnel passionnée, presente son Portfolio de gallery photo pour les mariage, les portraits, les événements">
+	<meta name="twitter:image" content="assets\images_compressed\nina.webp">
+
+
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
@@ -83,6 +96,7 @@
 				<div class="carousel-item active">
 					<!-- change add alt and modify format image -->
 					<img src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
+						 sizes="100vw"
 						 srcset="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1500w,
 								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w,
 								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-600.webp 600w"		
@@ -91,6 +105,7 @@
 				</div>
 				<div class="carousel-item">
 					<img loading="lazy" src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
+										sizes="100vw"
 										srcset="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp 1500w, 
 												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w,
 												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-600.webp 600w"
@@ -99,6 +114,7 @@
 				</div>
 				<div class="carousel-item">
 					<img loading="lazy" src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+										sizes="100vw"
 										srcset="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1500w,
 												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w,
 												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-600-bis.webp 600w"	
