modify link rel to preload for bootstrap css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<meta name="twitter:description" content="nina Carducci photographe professionnel passionnée, presente son Portfolio de gallery photo pour les portraits, les événements">
 	<meta name="twitter:image" content="assets\images_compressed\nina.webp">
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
