add width & heigt to img gallery

--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<!-- change add alt and modify format image -->
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash-480.webp" alt="image gallery concert aaron paul">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash-480.webp" alt="image gallery entreprise morshedlou">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash-480.webp" alt="image gallery entreprise jason goodman">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash-480.webp" alt="image gallery mariage hannah busing">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash-480.webp" alt="image gallery portrait ade tunji">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash-480.webp" alt="image gallery mariage jakob owens">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash-480.webp" alt="image gallery portrait nino van prattenburg">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash-480.webp" alt="image gallery concert austin neill">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-480.webp" alt="image gallery entreprise mateus campos">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash-480.webp" alt="image gallery concert aaron paul" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash-480.webp" alt="image gallery entreprise morshedlou" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash-480.webp" alt="image gallery entreprise jason goodman" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash-480.webp" alt="image gallery mariage hannah busing" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash-480.webp" alt="image gallery portrait ade tunji" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash-480.webp" alt="image gallery mariage jakob owens" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash-480.webp" alt="image gallery portrait nino van prattenburg" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash-480.webp" alt="image gallery concert austin neill" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-480.webp" alt="image gallery entreprise mateus campos" width="430" height="430">
 			</div>
 		</div>
 		<div class="quote">
