--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<!-- change add alt and modify format image -->
-					<img src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
+					<img fetchpriority= "hight"
+						src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
 						 sizes="100vw"
 						 srcset="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1500w,
 								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w,
@@ -102,7 +103,8 @@
 						 alt="image slider ryoji itwata">
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
+					<img loading="lazy" fetchpriority= "low"
+										src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
 										sizes="100vw"
 										srcset="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp 1500w, 
 												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w,
@@ -111,7 +113,8 @@
 										alt="image slider nicholas green">
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+					<img loading="lazy" fetchpriority= "low"
+										src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
 										sizes="100vw"
 										srcset="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1500w,
 												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w,
@@ -146,15 +149,15 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<!-- change add alt and modify format image -->
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash-480.webp" alt="image gallery concert aaron paul" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash-480.webp" alt="image gallery entreprise morshedlou" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash-480.webp" alt="image gallery entreprise jason goodman" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash-480.webp" alt="image gallery mariage hannah busing" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash-480.webp" alt="image gallery portrait ade tunji" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash-480.webp" alt="image gallery mariage jakob owens" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash-480.webp" alt="image gallery portrait nino van prattenburg" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash-480.webp" alt="image gallery concert austin neill" width="430" height="430">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-480.webp" alt="image gallery entreprise mateus campos" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/aaron-paul-wnX-fXzB6Cw-unsplash-480.webp?timestamp=86400000" alt="image gallery concert aaron paul" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/ali-morshedlou-WMD64tMfc4k-unsplash-480.webp?timestamp=86400000" alt="image gallery entreprise morshedlou" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/jason-goodman-tHO1_OuKbg0-unsplash-480.webp?timestamp=86400000" alt="image gallery entreprise jason goodman" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/hannah-busing-RvF2R_qMpRk-unsplash-480.webp?timestamp=86400000" alt="image gallery mariage hannah busing" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/ade-tunji-rVkhWWZFAtQ-unsplash-480.webp?timestamp=86400000" alt="image gallery portrait ade tunji" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images_compressed/gallery_compr/mariage_compr/jakob-owens-SiniLJkXhMc-unsplash-480.webp?timestamp=86400000" alt="image gallery mariage jakob owens" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images_compressed/gallery_compr/portrait_compr/nino-van-prattenburg-443cl1uR_8-unsplash-480.webp?timestamp=86400000" alt="image gallery portrait nino van prattenburg" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images_compressed/gallery_compr/concert_compr/austin-neill-hgO1wFPXl3I-unsplash-480.webp?timestamp=86400000" alt="image gallery concert austin neill" width="430" height="430">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images_compressed/gallery_compr/entreprise_compr/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-480.webp?timestamp=86400000" alt="image gallery entreprise mateus campos" width="430" height="430">
 			</div>
 		</div>
 		<div class="quote">
