--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 		
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-		<link rel="stylesheet" href="./assets/style.css">
+		<link rel="stylesheet" href="./assets/style.min.css">
 		
 		<!-- facebook -->
 		<meta property="og:title" content="Portfolio Galerie photo nina Carducci">
@@ -243,6 +243,6 @@
 </body>
 <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="./assets/maugallery.js"></script>
+<script src="./assets/maugallery.min.js"></script>
 <script src="./assets/scripts.js"></script>
 </html>
