--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</head>
 <body>
 <header class="top-header"> <!-- html syntaxe div to header-->
-	<h1 class="name">Nina Carducci</h1> <!-- change h3 to h1 -->
+	<h1 class="name">Nina Carducci, photographe portrait et évènements</h1> <!-- change h3 to h1 -->
 	<nav class="nav"> <!-- html syntaxe div to nav -->  
 		<ul>
 			<li><a href="#about">À propos</a></li>
