--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form method="post">
 					<!-- add for attribute to label to link with balise input  -->
 					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
