delete fetchpriority attribute

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<!-- change add alt and modify format image -->
-					<img fetchpriority= "hight"
-						src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
+					<img loading="eager"
+						 src="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
 						 sizes="100vw"
 						 srcset="./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1500w,
 								 ./assets/images_compressed/slider_compr/ryoji-iwata-wUZjnOv7t0g-unsplash-1000.webp 1000w,
@@ -104,24 +104,24 @@
 						 alt="image slider ryoji itwata">
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" fetchpriority= "low"
-										src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
-										sizes="100vw"
-										srcset="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp 1500w, 
-												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w,
-												./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-600.webp 600w"
-										class="d-block w-100" 
-										alt="image slider nicholas green">
+					<img loading="lazy" 
+						 src="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp"
+						 sizes="100vw"
+						 srcset="./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash.webp 1500w, 
+								 ./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-1000.webp 1000w,
+								 ./assets/images_compressed/slider_compr/nicholas-green-nPz8akkUmDI-unsplash-600.webp 600w"
+						 class="d-block w-100" 
+						 alt="image slider nicholas green">
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" fetchpriority= "low"
-										src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-										sizes="100vw"
-										srcset="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1500w,
-												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w,
-												./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-600-bis.webp 600w"	
-										 class="d-block w-100" 
-										 alt="image slider edward cisneros">
+					<img loading="lazy" 
+						 src="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+						 sizes="100vw"
+						 srcset="./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1500w,
+								 ./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-1000.webp 1000w,
+								 ./assets/images_compressed/slider_compr/edward-cisneros-3_h6-1NPDGw-unsplash-600-bis.webp 600w"	
+							 class="d-block w-100" 
+							 alt="image slider edward cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
